# CommunicationSoftware_wx

0331/: CMakeLists.txt  main.cpp
0407/: CMakeLists.txt  main.cpp
0414/: CMakeLists.txt  drawGraph_MATLAB.h  drawGraph_MATLAB.lib  main.cpp  使用前请先阅读我.md
0421/: CMakeLists.txt  main.cpp
0428/: CMakeLists.txt  main.cpp
0508/: Bmp.h  CMakeLists.txt  main.cpp
0512/client/: client.sln
0512/client/Debug/: client.ilk
0512/client/client/: client.vcxproj  main.cpp
0512/client/client/Debug/: client.exe.recipe  vc142.idb
0512/client/client/Debug/client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
0512/server/: 0512.sln
0512/server/0512/: 0512.vcxproj  main.cpp
0512/server/0512/Debug/: 0512.exe.recipe  vc142.idb
0512/server/0512/Debug/0512.tlog/: 0512.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
0512/server/Debug/: 0512.ilk
